methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:37: error: not found: value c
  while (c>0) {
         ^PictureMono2:39: error: not found: value c
    c=c-1
    ^